Fixing according to feedback from consultation regarding the file organization

--- a/Project_str.ipynb
+++ b/Project_str.ipynb
@@ -10,42 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting fiona\n",
-      "  Using cached https://files.pythonhosted.org/packages/6d/42/f4a7cac53b28fa70e9a93d0e89a24d33e14826dad6644b699362ad84dde0/Fiona-1.8.13.post1.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "    ERROR: Complete output from command python setup.py egg_info:\n",
-      "    ERROR: A GDAL API version must be specified. Provide a path to gdal-config using a GDAL_CONFIG environment variable or use a GDAL_VERSION environment variable.\n",
-      "    ----------------------------------------\n",
-      "ERROR: Command \"python setup.py egg_info\" failed with error code 1 in C:\\Users\\janek\\AppData\\Local\\Temp\\pip-install-hsrddcj3\\fiona\\\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install fiona"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,10 +23,10 @@
     "from lxml import html\n",
     "import time\n",
     "import itertools\n",
-    "# import geopandas as gp\n",
-    "# import fiona\n",
-    "# import shapely\n",
-    "# import scipy\n",
+    "import geopandas as gp\n",
+    "import fiona\n",
+    "import shapely\n",
+    "import scipy\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
     "import matplotlib.pyplot as plt\n",
@@ -81,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,217 +451,13 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Číslo inzerátu:</th>\n",
-       "      <th>Internet:</th>\n",
-       "      <th>Dispozice:</th>\n",
-       "      <th>Plocha:</th>\n",
-       "      <th>Cena:</th>\n",
-       "      <th>Poplatky:</th>\n",
-       "      <th>Vratná kauce:</th>\n",
-       "      <th>Město:</th>\n",
-       "      <th>Městská část:</th>\n",
-       "      <th>Typ vlastnictví:</th>\n",
-       "      <th>...</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "      <th>Vybavenost:</th>\n",
-       "      <th>Stáří:</th>\n",
-       "      <th>Provedení:</th>\n",
-       "      <th>Typ vytápění:</th>\n",
-       "      <th>Podlaží v rámci domu:</th>\n",
-       "      <th>Rekonstrukce:</th>\n",
-       "      <th>Předzahrádka:</th>\n",
-       "      <th>Novostavba:</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>602233</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3+1</td>\n",
-       "      <td>85 m²</td>\n",
-       "      <td>22.000 Kč</td>\n",
-       "      <td>3.000 Kč</td>\n",
-       "      <td>25.000 Kč</td>\n",
-       "      <td>Praha</td>\n",
-       "      <td>Nové Město</td>\n",
-       "      <td>Osobní</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50.078073</td>\n",
-       "      <td>14.423947</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>483454</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3+kk</td>\n",
-       "      <td>77 m²</td>\n",
-       "      <td>23.000 Kč</td>\n",
-       "      <td>750 Kč</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Praha</td>\n",
-       "      <td>Nové Město</td>\n",
-       "      <td>Osobní</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50.070536</td>\n",
-       "      <td>14.418702</td>\n",
-       "      <td>Vybavený</td>\n",
-       "      <td>1 - 10</td>\n",
-       "      <td>standardní: běžné materiály a technologie</td>\n",
-       "      <td>plynový kotel</td>\n",
-       "      <td>první až předposlední podlaží</td>\n",
-       "      <td>vše</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>524239</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2+kk</td>\n",
-       "      <td>39 m²</td>\n",
-       "      <td>15.500 Kč</td>\n",
-       "      <td>750 Kč</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Praha</td>\n",
-       "      <td>Nové Město</td>\n",
-       "      <td>Osobní</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50.070427</td>\n",
-       "      <td>14.418905</td>\n",
-       "      <td>Vybavený</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>558443</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3+1</td>\n",
-       "      <td>81 m²</td>\n",
-       "      <td>25.500 Kč</td>\n",
-       "      <td>3.000 Kč</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Praha</td>\n",
-       "      <td>Nové Město</td>\n",
-       "      <td>Osobní</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50.070536</td>\n",
-       "      <td>14.418702</td>\n",
-       "      <td>Vybavený</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>602091</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1+kk</td>\n",
-       "      <td>35 m²</td>\n",
-       "      <td>11.500 Kč</td>\n",
-       "      <td>1.500 Kč</td>\n",
-       "      <td>15.000 Kč</td>\n",
-       "      <td>Praha</td>\n",
-       "      <td>Nové Město</td>\n",
-       "      <td>Družstevní</td>\n",
-       "      <td>...</td>\n",
-       "      <td>50.070531</td>\n",
-       "      <td>14.430608</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Číslo inzerátu:  Internet: Dispozice: Plocha:      Cena: Poplatky:  \\\n",
-       "0           602233        NaN        3+1   85 m²  22.000 Kč  3.000 Kč   \n",
-       "1           483454        NaN       3+kk   77 m²  23.000 Kč    750 Kč   \n",
-       "2           524239        NaN       2+kk   39 m²  15.500 Kč    750 Kč   \n",
-       "3           558443        NaN        3+1   81 m²  25.500 Kč  3.000 Kč   \n",
-       "4           602091        NaN       1+kk   35 m²  11.500 Kč  1.500 Kč   \n",
-       "\n",
-       "  Vratná kauce: Město: Městská část: Typ vlastnictví:  ...        lat  \\\n",
-       "0     25.000 Kč  Praha    Nové Město           Osobní  ...  50.078073   \n",
-       "1           NaN  Praha    Nové Město           Osobní  ...  50.070536   \n",
-       "2           NaN  Praha    Nové Město           Osobní  ...  50.070427   \n",
-       "3           NaN  Praha    Nové Město           Osobní  ...  50.070536   \n",
-       "4     15.000 Kč  Praha    Nové Město       Družstevní  ...  50.070531   \n",
-       "\n",
-       "        long  Vybavenost:  Stáří:                                 Provedení:  \\\n",
-       "0  14.423947          NaN     NaN                                        NaN   \n",
-       "1  14.418702     Vybavený  1 - 10  standardní: běžné materiály a technologie   \n",
-       "2  14.418905     Vybavený     NaN                                        NaN   \n",
-       "3  14.418702     Vybavený     NaN                                        NaN   \n",
-       "4  14.430608          NaN     NaN                                        NaN   \n",
-       "\n",
-       "   Typ vytápění:          Podlaží v rámci domu: Rekonstrukce:  Předzahrádka:  \\\n",
-       "0            NaN                            NaN           NaN            NaN   \n",
-       "1  plynový kotel  první až předposlední podlaží           vše            NaN   \n",
-       "2            NaN                            NaN           NaN            NaN   \n",
-       "3            NaN                            NaN           NaN            NaN   \n",
-       "4            NaN                            NaN           NaN            NaN   \n",
-       "\n",
-       "   Novostavba:  \n",
-       "0          NaN  \n",
-       "1          NaN  \n",
-       "2          NaN  \n",
-       "3          NaN  \n",
-       "4          NaN  \n",
-       "\n",
-       "[5 rows x 28 columns]"
-      ]
+      "text/plain": "   Číslo inzerátu:  Internet: Dispozice: Plocha:      Cena: Poplatky:  \\\n0           602233        NaN        3+1   85 m²  22.000 Kč  3.000 Kč   \n1           483454        NaN       3+kk   77 m²  23.000 Kč    750 Kč   \n2           524239        NaN       2+kk   39 m²  15.500 Kč    750 Kč   \n3           558443        NaN        3+1   81 m²  25.500 Kč  3.000 Kč   \n4           602091        NaN       1+kk   35 m²  11.500 Kč  1.500 Kč   \n\n  Vratná kauce: Město: Městská část: Typ vlastnictví:  ...        lat  \\\n0     25.000 Kč  Praha    Nové Město           Osobní  ...  50.078073   \n1           NaN  Praha    Nové Město           Osobní  ...  50.070536   \n2           NaN  Praha    Nové Město           Osobní  ...  50.070427   \n3           NaN  Praha    Nové Město           Osobní  ...  50.070536   \n4     15.000 Kč  Praha    Nové Město       Družstevní  ...  50.070531   \n\n        long  Vybavenost:  Stáří:                                 Provedení:  \\\n0  14.423947          NaN     NaN                                        NaN   \n1  14.418702     Vybavený  1 - 10  standardní: běžné materiály a technologie   \n2  14.418905     Vybavený     NaN                                        NaN   \n3  14.418702     Vybavený     NaN                                        NaN   \n4  14.430608          NaN     NaN                                        NaN   \n\n   Typ vytápění:          Podlaží v rámci domu: Rekonstrukce:  Předzahrádka:  \\\n0            NaN                            NaN           NaN            NaN   \n1  plynový kotel  první až předposlední podlaží           vše            NaN   \n2            NaN                            NaN           NaN            NaN   \n3            NaN                            NaN           NaN            NaN   \n4            NaN                            NaN           NaN            NaN   \n\n   Novostavba:  \n0          NaN  \n1          NaN  \n2          NaN  \n3          NaN  \n4          NaN  \n\n[5 rows x 28 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Číslo inzerátu:</th>\n      <th>Internet:</th>\n      <th>Dispozice:</th>\n      <th>Plocha:</th>\n      <th>Cena:</th>\n      <th>Poplatky:</th>\n      <th>Vratná kauce:</th>\n      <th>Město:</th>\n      <th>Městská část:</th>\n      <th>Typ vlastnictví:</th>\n      <th>...</th>\n      <th>lat</th>\n      <th>long</th>\n      <th>Vybavenost:</th>\n      <th>Stáří:</th>\n      <th>Provedení:</th>\n      <th>Typ vytápění:</th>\n      <th>Podlaží v rámci domu:</th>\n      <th>Rekonstrukce:</th>\n      <th>Předzahrádka:</th>\n      <th>Novostavba:</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>602233</td>\n      <td>NaN</td>\n      <td>3+1</td>\n      <td>85 m²</td>\n      <td>22.000 Kč</td>\n      <td>3.000 Kč</td>\n      <td>25.000 Kč</td>\n      <td>Praha</td>\n      <td>Nové Město</td>\n      <td>Osobní</td>\n      <td>...</td>\n      <td>50.078073</td>\n      <td>14.423947</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>483454</td>\n      <td>NaN</td>\n      <td>3+kk</td>\n      <td>77 m²</td>\n      <td>23.000 Kč</td>\n      <td>750 Kč</td>\n      <td>NaN</td>\n      <td>Praha</td>\n      <td>Nové Město</td>\n      <td>Osobní</td>\n      <td>...</td>\n      <td>50.070536</td>\n      <td>14.418702</td>\n      <td>Vybavený</td>\n      <td>1 - 10</td>\n      <td>standardní: běžné materiály a technologie</td>\n      <td>plynový kotel</td>\n      <td>první až předposlední podlaží</td>\n      <td>vše</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>524239</td>\n      <td>NaN</td>\n      <td>2+kk</td>\n      <td>39 m²</td>\n      <td>15.500 Kč</td>\n      <td>750 Kč</td>\n      <td>NaN</td>\n      <td>Praha</td>\n      <td>Nové Město</td>\n      <td>Osobní</td>\n      <td>...</td>\n      <td>50.070427</td>\n      <td>14.418905</td>\n      <td>Vybavený</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>558443</td>\n      <td>NaN</td>\n      <td>3+1</td>\n      <td>81 m²</td>\n      <td>25.500 Kč</td>\n      <td>3.000 Kč</td>\n      <td>NaN</td>\n      <td>Praha</td>\n      <td>Nové Město</td>\n      <td>Osobní</td>\n      <td>...</td>\n      <td>50.070536</td>\n      <td>14.418702</td>\n      <td>Vybavený</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>602091</td>\n      <td>NaN</td>\n      <td>1+kk</td>\n      <td>35 m²</td>\n      <td>11.500 Kč</td>\n      <td>1.500 Kč</td>\n      <td>15.000 Kč</td>\n      <td>Praha</td>\n      <td>Nové Město</td>\n      <td>Družstevní</td>\n      <td>...</td>\n      <td>50.070531</td>\n      <td>14.430608</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 28 columns</p>\n</div>"
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
@@ -2038,9 +1799,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6 64-bit ('.venv': venv)",
    "language": "python",
-   "name": "python3"
+   "name": "python37664bitvenvvenv5e1ec3b734734ad5a665c6c560f756ed"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2052,7 +1813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
