Clean up of scraper file

--- a/Project_str.ipynb
+++ b/Project_str.ipynb
@@ -89,6 +89,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NM_sale.to_csv(\"NM_sale.csv\", encoding = \"UTF-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "tags": []
@@ -102,6 +111,15 @@
    ],
    "source": [
     "NM_rent = bzs.Downloader('https://www.bezrealitky.cz/vypis/nabidka-pronajem/byt/praha/praha-nove-mesto?_token=9bJA2qC1aukcLy7H7sAJ_5ohLqHRAEzXGDbE68ylUB0').df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NM_rent.to_csv(\"NM_rent.csv\", encoding = \"UTF-8\")"
    ]
   },
   {
