Renaming parent class to WebpageScraped, deleting test_link in Project_str

--- a/Project_str.ipynb
+++ b/Project_str.ipynb
@@ -62,16 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_link = 'https://www.bezrealitky.cz/nemovitosti-byty-domy/624532-nabidka-prodej-bytu-rozmitalska-pribram'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +71,7 @@
       "text/plain": "'624532-nabidka-prodej-bytu-rozmitalska-pribram'"
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 7
     }
    ],
    "source": [
@@ -107,11 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                Internet: Dispozice: Plocha:         Cena:   Město:  \\\nČíslo inzerátu:                                                       \n626309                          2+kk   64 m²  2.748.000 Kč  Příbram   \n\n                Městská část: Typ vlastnictví: Typ budovy: PENB: Podlaží:  \\\nČíslo inzerátu:                                                             \n626309                 Zdaboř           Osobní       Cihla     G        2   \n\n                Balkón: Terasa: Výtah: Garáž: K dispozici od:        lat  \\\nČíslo inzerátu:                                                            \n626309               Ne      Ne     Ne    Ano    15. 09. 2020  49.666359   \n\n                      long  \nČíslo inzerátu:             \n626309           13.984421  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Internet:</th>\n      <th>Dispozice:</th>\n      <th>Plocha:</th>\n      <th>Cena:</th>\n      <th>Město:</th>\n      <th>Městská část:</th>\n      <th>Typ vlastnictví:</th>\n      <th>Typ budovy:</th>\n      <th>PENB:</th>\n      <th>Podlaží:</th>\n      <th>Balkón:</th>\n      <th>Terasa:</th>\n      <th>Výtah:</th>\n      <th>Garáž:</th>\n      <th>K dispozici od:</th>\n      <th>lat</th>\n      <th>long</th>\n    </tr>\n    <tr>\n      <th>Číslo inzerátu:</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>626309</th>\n      <td></td>\n      <td>2+kk</td>\n      <td>64 m²</td>\n      <td>2.748.000 Kč</td>\n      <td>Příbram</td>\n      <td>Zdaboř</td>\n      <td>Osobní</td>\n      <td>Cihla</td>\n      <td>G</td>\n      <td>2</td>\n      <td>Ne</td>\n      <td>Ne</td>\n      <td>Ne</td>\n      <td>Ano</td>\n      <td>15. 09. 2020</td>\n      <td>49.666359</td>\n      <td>13.984421</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "source": [
-    "bzs.Flat('https://www.bezrealitky.cz/nemovitosti-byty-domy/626309-nabidka-prodej-bytu-taborska-pribram').getDf()"
+    "bzs.Flat('https://www.bezrealitky.cz/nemovitosti-byty-domy/626309-nabidka-prodej-bytu-taborska-pribram').df"
    ]
   },
   {
